--- a/my-app/src/Companents/OksanaPage/OksanaPage.css
+++ b/my-app/src/Companents/OksanaPage/OksanaPage.css
@@ -1,3 +1,392 @@
+.opgmb-box{
+    width: 90svw;
+    height: auto;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Montserrat';
+}
+.opgmb-prof{
+    margin-top: 50px;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    display: flex;
+    gap: 30px;
+}
+.opgmb-prof img{
+    height: 250px;
+    width: auto;
+}
+.opgmb-prof-text{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+.opgmb-prof-text p{
+    margin: 0;
+}
+.opgmb-prof-text h1{
+    font-size: 30px;
+    margin:0;
+    margin-top: 2px;
+}
+.opgmb-prof-text{
+    width: 100%;
+    text-align: left;
+    font-size: 22px;
+    margin: 0;
+}
+.opgmb-bold{
+    font-family: 'Montserrat-SemiBold';
+    font-size: 25px;
+}
+.opgmb-button{
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+}
+.opgmb-button button{
+    width: 100%;
+    height: 55px;
+    font-size: 23px;
+    border: 1px solid #474747;
+    background-color: #ffffff00;
+    border-radius: 28px;
+    font-family: 'Montserrat';
+    color:black;
+    transition: all 0.6s ease;
+}
+.opgmb-button button:hover{
+    background-color: #474747;
+    color:white
+}
+.opgmb-about{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+.opgmb-about h1{
+    text-align: center;
+    font-size: 28px;
+}
+.opgmb-subtitle{
+    background-color: #fff;
+    width: auto;
+    padding-top: 0;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.opgmb-subtitle h1{
+    font-size: 24px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 0;
+    font-family: "Montserrat";
+    
+    text-align: left;
+}
+.opgmb-ul{
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.opgmb-ul ul li{
+    margin-top: 20px;
+    font-family: 'Montserrat';
+    font-size: 20px;
+}
+.opgmb-ul ul li::marker{
+    color: #474747;
+    font-size: 13px;
+}
+.opgmb-services{
+    width: 88%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.opgmb-services-item{
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Montserrat';
+    font-size: 20px;
+    gap:20px
+}
+.opgmb-portfolio{
+    margin-top: 20px;
+}
+.opgmb-portfolio h1{
+    text-align: center;
+    margin: 40px;
+    font-size: 28px;
+}
+.opgmb-works {
+    margin-top: 50px;
+    width: 83svw;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 5.2svw;
+    margin-bottom: 180px;
+}
+.opgmb-row{
+    display: flex;
+    justify-content: space-between;
+}
+.opgmb-row img{
+    width: 38.9svw;
+    height: auto;
+} 
+@media (max-width:570px) {
+    .opgmb-prof{
+        gap: 20px;
+    }
+    .opgmb-prof img{
+        height: 220px;
+    }
+    .opgmb-prof-text{
+        gap: 30px;
+    }
+    .opgmb-prof-text h1{
+        font-size: 26px;
+    }
+    .opgmb-prof-text{
+        font-size: 20px;
+        margin: 0;
+    }
+    .opgmb-bold{
+        font-size: 22px;
+    }
+    .opgmb-button{
+        width: 80%;
+        margin-top: 20px;
+    }
+    .opgmb-button button{
+        height: 55px;
+        font-size: 22px;
+    }
+    .opgmb-about h1{
+        font-size: 26px;
+    }
+    .opgmb-subtitle{
+        margin-bottom: 20px;
+    }
+    .opgmb-subtitle h1{
+        font-size: 22px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .opgmb-ul{
+        width: 100%;
+        margin: 0;
+    }
+    .opgmb-ul ul li{
+        margin-top: 20px;
+        font-size: 18px;
+        padding-left: 0;
+
+    }
+    .opgmb-services{
+        width: 95%;
+        gap: 30px;
+    }
+    .opgmb-services-item{
+        font-size: 18px;
+    }
+    .opgmb-portfolio h1{
+        margin: 30px;
+        font-size: 26px;
+    }
+    .opgmb-works {
+        margin-top: 30px;
+        width: 87svw;
+        gap: 5.2svw;
+        margin-bottom: 70px;
+    }
+    .opgmb-row{
+        display: flex;
+        justify-content: space-between;
+    }
+    .opgmb-row img{
+        width: 40.9svw;
+        height: auto;
+    } 
+}
+@media (max-width:450px) {
+    .opgmb-prof{
+        gap: 15px;
+    }
+    .opgmb-prof img{
+        height: 180px;
+    }
+    .opgmb-prof-text{
+        gap: 20px;
+    }
+    .opgmb-prof-text h1{
+        font-size: 22px;
+    }
+    .opgmb-prof-text{
+        font-size: 18px;
+        margin: 0;
+    }
+    .opgmb-bold{
+        font-size: 20px;
+    }
+    .opgmb-button{
+        width: 100%;
+        margin-top: 15px;
+    }
+    .opgmb-button button{
+        height: 45px;
+        font-size: 20px;
+    }
+    .opgmb-about{
+        margin-top: 10px;
+    }
+    .opgmb-about h1{
+        font-size: 22px;
+    }
+    .opgmb-subtitle{
+        margin-bottom: 20px;
+    }
+    .opgmb-subtitle h1{
+        font-size: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .opgmb-ul{
+        width: 100%;
+        margin: 0;
+        margin-left: -10px;
+    }
+    .opgmb-ul ul li{
+        margin-top: 20px;
+        font-size: 17px;
+        padding-left: 0;
+
+    }
+    .opgmb-services{
+        width: 95%;
+        gap: 30px;
+    }
+    .opgmb-services-item{
+        font-size: 17px;
+    }
+    .opgmb-portfolio h1{
+        margin: 30px;
+        font-size: 22px;
+    }
+    .opgmb-works {
+        margin-top: 30px;
+        width: 87svw;
+        gap: 5.2svw;
+        margin-bottom: 70px;
+    }
+    .opgmb-row{
+        display: flex;
+        justify-content: space-between;
+    }
+    .opgmb-row img{
+        width: 40.9svw;
+        height: auto;
+    } 
+}
+@media (max-width:400px) {
+    .opgmb-prof{
+        gap: 13px;
+    }
+    .opgmb-prof img{
+        height: 140px;
+    }
+    .opgmb-prof-text{
+        gap: 18px;
+    }
+    .opgmb-prof-text h1{
+        font-size: 20px;
+    }
+    .opgmb-prof-text{
+        font-size: 16px;
+        margin: 0;
+    }
+    .opgmb-bold{
+        font-size: 18px;
+    }
+    .opgmb-button{
+        width: 100%;
+        margin-top: 15px;
+    }
+    .opgmb-button button{
+        height: 45px;
+        font-size: 20px;
+    }
+    .opgmb-about{
+        margin-top: 10px;
+    }
+    .opgmb-about h1{
+        font-size: 22px;
+    }
+    .opgmb-subtitle{
+        margin-bottom: 20px;
+    }
+    .opgmb-subtitle h1{
+        font-size: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .opgmb-ul{
+        width: 100%;
+        margin: 0;
+        margin-left: -10px;
+    }
+    .opgmb-ul ul li{
+        margin-top: 20px;
+        font-size: 17px;
+        padding-left: 0;
+
+    }
+    .opgmb-services{
+        width: 95%;
+        gap: 30px;
+    }
+    .opgmb-services-item{
+        font-size: 17px;
+    }
+    .opgmb-portfolio h1{
+        margin: 30px;
+        font-size: 22px;
+    }
+    .opgmb-works {
+        margin-top: 30px;
+        width: 87svw;
+        gap: 5.2svw;
+        margin-bottom: 70px;
+    }
+    .opgmb-row{
+        display: flex;
+        justify-content: space-between;
+    }
+    .opgmb-row img{
+        width: 40.9svw;
+        height: auto;
+    } 
+}
+
+
+
+
+
 .opg-box{
     width: 1400px;
     height: auto;
