--- a/my-app/src/Companents/AboutSalon/AboutSalon.css
+++ b/my-app/src/Companents/AboutSalon/AboutSalon.css
@@ -1,6 +1,6 @@
 .as-box {
     width: 100%;
-    height: 900px;
+    height: auto;
     text-align: center;
     padding-top: 60px;
 }
@@ -45,7 +45,7 @@
 }
 @media (max-width:1500px) {
     .as-box{
-        height: 770px;
+        height: auto;
         padding-top: 60px;
     
     }
@@ -77,7 +77,7 @@
 }
 @media (max-width:1024px) {
     .as-box{
-        height: 640px;
+        height: auto;
         padding-top: 30px;
     }
     
