--- a/my-app/src/Companents/Salon/PriceList.css
+++ b/my-app/src/Companents/Salon/PriceList.css
@@ -8,13 +8,14 @@
 .pr-switch{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 5svw;
+  margin-bottom: 35px;
   width: auto;
   margin-right: auto;
   margin-left: auto;
+  height: auto;
 }
 .pr-content {
-  margin: 3.5svw 5svw 5svw 5svw;
+  margin: 35px 5svw 5svw 5svw;
   min-width: 90svw;
   overflow: hidden;
   transition: height 0.3s ease;
@@ -26,12 +27,12 @@
   width: 100%;
   max-height: 100px; 
   overflow: hidden;
-  transition: max-height 1s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-1.expanded {
-  max-height: 1500px;
-  transition: max-height 1s ease;
+  max-height: 1000px;
+  transition: max-height 2.06s ease;
 }
 .menu-1.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -41,14 +42,14 @@
   margin: 0;
   background-color: #ffffff;
   width: 100%;
-  height: auto;
+  max-height: 100px;
   overflow: hidden;
-  transition: all 300000000000000000000s ease;
+  transition: all 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-2.expanded {
-  max-height: 100px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: all 20000006s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: all 2.06s ease;
 }
 .menu-2.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -63,7 +64,7 @@
   border-bottom: 1px solid black;
 }
 .menu-3.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
   transition: max-height 2.06s ease;
 }
 .menu-3.expanded .pr-menu-visible img{
@@ -76,12 +77,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 1.06s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-4.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 1.06s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-4.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -93,12 +94,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 0.83s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-5.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 0.83s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-5.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -110,12 +111,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 2.67s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-6.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 2.67s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-6.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -127,12 +128,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 0.5s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-7.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 0.5s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-7.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -144,12 +145,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 0.83s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-8.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 0.83s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-8.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -160,12 +161,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 0.27s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-9.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 0.27s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-9.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -176,12 +177,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 0.5s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-10.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 0.5s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-10.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -192,12 +193,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 1.1s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-11.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 1.1s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-11.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -208,12 +209,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 1.33s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-12.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 1.33s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-12.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -224,12 +225,12 @@
   width: 100%;
   max-height: 100px;
   overflow: hidden;
-  transition: max-height 1.67s ease;
+  transition: max-height 2.06s ease;
   border-bottom: 1px solid black;
 }
 .menu-13.expanded {
-  max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
-  transition: max-height 1.67s ease;
+  max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+  transition: max-height 2.06s ease;
 }
 .menu-13.expanded .pr-menu-visible img{
   rotate:180deg;
@@ -295,6 +296,10 @@
   font-family: "Montserrat-Medium";
 
 }
+.pr-diva{
+  margin-top: 8px;
+
+}
 .pr-diva a{
   font-size: 18px;
   text-decoration: none;
@@ -305,7 +310,7 @@
 .pr-divht{
   flex: 1;
   background-color: #ffffff00;
-  width: 80%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 8px;
@@ -318,4 +323,54 @@
 
 .pr-diva.active .pr-divht {
   background-color: rgba(255, 255, 255);
+}
+@media (max-width:768px) {
+  .pr-content {
+    margin: 35px 0svw 5svw 0svw;
+  }
+  .pr-menu-visible h2{
+    padding-left: 40px;
+    font-size: 20px;
+  }
+  .pr-menu-visible img{
+    margin-right: 40px;
+    width: 40px;
+    height: auto;
+    transition: all 1s ease;
+  }
+  .pr-line{
+    width: 90svw;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    gap: 40px;
+  }
+  .pr-hair-full-price{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    line-height: 60px;
+    color: black;
+    font-size: 17px;
+  }
+  .pr-switch{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 35px;
+    width: 90svw;
+    margin-right: auto;
+    margin-left: auto;
+    height: auto;
+  }
+  .pr-diva a{
+    font-size: 16px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    transition: color 0.5s ease;
+    cursor: pointer;
+  }
 }
