--- a/my-app/src/Companents/TopServices/TSCarousel.css
+++ b/my-app/src/Companents/TopServices/TSCarousel.css
@@ -57,6 +57,8 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    z-index: 110000;
+
 }
 .itemmb img{
     width: 100%;
