--- a/my-app/src/Companents/Salon/PriceList.css
+++ b/my-app/src/Companents/Salon/PriceList.css
@@ -335,6 +335,33 @@
 .pr-diva.active .pr-divht {
   background-color: rgba(255, 255, 255);
 }
+@media (max-width:1300px) {
+  .menu-5.expanded {
+    max-height: 1300px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 2.06s ease;
+  }
+}
+@media (max-width:1000px) {
+  .menu-7.expanded {
+    max-height: 270px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-12.expanded {
+    max-height: 700px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+}
+@media (max-width:800px) {
+  .menu-6.expanded {
+    max-height: 1500px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-11.expanded {
+    max-height: 930px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+}
+
 @media (max-width:768px) {
   .pr-content {
     margin: 35px 0svw 5svw 0svw;
@@ -387,6 +414,70 @@
     cursor: pointer;
   }
 }
+@media (max-width:600px) {
+  .menu-2.expanded {
+    max-height: 1550px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-3.expanded {
+    max-height: 1400px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-4.expanded {
+    max-height: 2100px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-6.expanded {
+    max-height: 1600px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-10.expanded {
+    max-height: 600px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-13.expanded {
+    max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+}
+@media (max-width:450px) {
+  .menu-1.expanded {
+    max-height: 1100px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-2.expanded {
+    max-height: 1700px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-3.expanded {
+    max-height: 1700px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-4.expanded {
+    max-height: 2300px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-6.expanded {
+    max-height: 2000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-7.expanded {
+    max-height: 500px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-10.expanded {
+    max-height: 800px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-11.expanded {
+    max-height: 1000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-13.expanded {
+    max-height: 1200px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+}
 @media (max-width:410px) {
   .pr-switch{
     gap:17svw;
@@ -418,7 +509,13 @@
     color: black;
     font-size: 15px;
   }
+}
+@media (max-width:450px) {
+  .menu-5.expanded {
+    max-height: 1800px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
   }
+}
 @media (max-width:340px) {
   .pr-switch{
     gap:10px;
@@ -431,5 +528,55 @@
 @media (max-width:340px) {
   .pr-switch{
     gap:10px;
+  }
+}
+@media (max-width:300px) {
+  .menu-1.expanded {
+    max-height: 110000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-2.expanded {
+    max-height: 170000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-3.expanded {
+    max-height: 170000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-4.expanded {
+    max-height: 230000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-5.expanded {
+    max-height: 230000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-6.expanded {
+    max-height: 2000000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-7.expanded {
+    max-height: 50000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-10.expanded {
+    max-height: 80000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-11.expanded {
+    max-height: 100000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-12.expanded {
+    max-height: 100000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-13.expanded {
+    max-height: 120000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
+  }
+  .menu-8.expanded {
+    max-height: 100000px; /* Установите максимальную высоту, подходящую для вашего контента */
+    transition: max-height 1.06s ease;
   }
 }
